# Polyhedral-FEA

./: .clang-format  .gitattributes  .gitignore  CHANGES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  PROGRESS.md  README.md  SPEC.md  build.sh
.github/workflows/: ci.yml
apps/bench/: CMakeLists.txt  d6_tier3.cpp
apps/cli/: main.cpp
apps/gui/: CMakeLists.txt  gui_settings.cpp  gui_settings.hpp  main.cpp  process_runner.cpp  process_runner.hpp  testlab_data.cpp  testlab_data.hpp  testlab_panel.cpp  testlab_panel.hpp  theme.cpp  viewport.cpp  viewport.hpp  widgets.cpp  widgets.hpp
apps/testlab/: CMakeLists.txt  main.cpp  probe_util.hpp
audits/: README.md
bench/campaigns/: README.md
bench/competitive/: README.md  emit_polymesh_gate1.py  render_scoreboard.py  run_polymesh_smoke.sh  schema.json
bench/d6/: run_tier3.py
bench/packing/: run_packing_microbench.py
docs/: ROADMAP.md  progress.md  solver-core.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
scripts/: analyze_campaign.py  check_no_product_stl.sh  gen_cad_parts.py  gen_part_library.py  invoke_grok_improve.sh  self_improve.sh  warehouse_shots.py  write_grok_handoff.py
src/mesh/: CMakeLists.txt
src/mesh/include/mesh/: cvt_export.hpp  cvt_lloyd.hpp  cvt_sites.hpp  geogram_clip.hpp  grid_classify.hpp  hex_fill.hpp  hybrid_fill.hpp  local_refine.hpp  mixed_fill.hpp  octa_fill.hpp  poly_mesh.hpp  quality.hpp  surface_project.hpp  tet_fill.hpp  transition_fill.hpp  varyhedron_fill.hpp  wall_project.hpp
src/mesh/src/: cvt_export.cpp  cvt_lloyd.cpp  cvt_sites.cpp  geogram_clip.cpp  grid_classify.cpp  hex_fill.cpp  hybrid_fill.cpp  local_refine.cpp  mixed_fill.cpp  octa_fill.cpp  poly_mesh.cpp  prism_fill.cpp  quality.cpp  surface_project.cpp  tet_fill.cpp  transition_fill.cpp  varyhedron_fill.cpp  wall_project.cpp
tests/: CMakeLists.txt  test_backend.cpp  test_cad_model.cpp  test_cad_topology.cpp  test_cantilever.cpp  test_curved_mesh_quality.cpp  test_cvt_export.cpp  test_cvt_lloyd.cpp  test_cvt_poly_mesher.cpp  test_cvt_sites.cpp  test_d6_bench_smoke.cpp  test_element_tendency.cpp  test_fe_vem_assembly.cpp  test_features.cpp  test_geogram_clip.cpp  test_geometry_fidelity.cpp  test_graded_fill.cpp  test_graded_sizing.cpp  test_gui_pipeline.cpp  test_hex_vem_pipeline.cpp  test_hierarchical.cpp  test_hp_assembly.cpp  test_iterative_solve.cpp  test_kirsch_c5_graded.cpp  test_lame_cylinder.cpp  test_local_refine.cpp  test_material.cpp  test_mixed_fill.cpp  test_mms_convergence.cpp  test_octa_fill.cpp  test_p_elevate.cpp  test_poly_mesh.cpp  test_prism.cpp  test_prism_fill.cpp  test_probe_util.cpp  test_product_mesh_tier1.cpp  test_quadrature.cpp  test_quality.cpp  test_reference_case.cpp  test_refinement_plan.cpp  (+14 more)
tests/fixtures/: unit_cube.step
tests/fixtures/parts/: cantilever.case.json  cantilever.step  cantilever.stl  cylinder.case.json  cylinder.step  icecream_cone.case.json  icecream_cone.step  pipe.step  plate_hole.case.json  plate_hole.step  plate_hole.stl  smoke_bar.case.json  smoke_bar.step  smoke_bar.stl  sphere.case.json  sphere.step
tests/support/: box_model.hpp  mms.cpp  mms.hpp  structured_mesh.cpp  structured_mesh.hpp
(+283 files in other folders)
